# radical-starfinder

./: .gitignore  AGENTS.md  Cargo.toml  IDEAS.md  TODO.md  build.rs  clippy_output.txt  combat_design.md  do_rewrite.py  hsk1_comparison.txt  hsk1_hanzicraft.txt  hsk1_our_decomp.txt  index.html  manifest.json  package.json  plan.md  playwright.config.ts  quick_vocab_check.txt  rewrite.py  rewrite_all.py  rewrite_plan.sh  run_changes.py  test_elite.rs  update_build_rs.py
.agents/end-to-end-testing/: SKILL.md
.github/workflows/: gh-pages.yml
data/: tileset_index.csv  unique_chars.txt
data/maps/: alien_ruins_encounter_room_32x22.csv  asteroid_base_encounter_room_32x22.csv  derelict_ship_encounter_room_32x22.csv  mining_colony_encounter_room_32x22.csv  orbital_platform_encounter_room_32x22.csv  player_ship_interior_40x24.csv  research_lab_encounter_room_32x22.csv  space_station_expansion_encounter_room_32x22.csv  trading_post_encounter_room_32x22.csv
docs/: agent_implementation_prompt.md  radical_starfinder_missing_assets_README.md
e2e/: 01-smoke.spec.ts  02-canvas-rendering.spec.ts  03-keyboard-input.spec.ts  04-touch-controls.spec.ts  05-pwa-features.spec.ts  06-game-loading.spec.ts  07-error-handling.spec.ts  08-ui-states.spec.ts  09-visual-regression.spec.ts  10-integration.spec.ts  11-player-movement.spec.ts  12-combat.spec.ts  13-hp-system.spec.ts  14-abilities.spec.ts  15-floor-progression.spec.ts  16-death-gameover.spec.ts  17-pinyin-input.spec.ts  18-console-commands.spec.ts  19-inventory.spec.ts  20-full-session.spec.ts  helpers.ts
src/: achievement.rs  asset_catalog.rs  audio.rs  codex.rs  crucible.rs  enemy.rs  game.rs  lib.rs  particle.rs  player.rs  radical.rs  rarity.rs  render.rs  skill_tree.rs  sprites.rs  srs.rs  status.rs  vocab.rs
src/achievement/: tests.rs
src/codex/: tests.rs
src/combat/: action.rs  ai.rs  boss.rs  grid.rs  input.rs  mod.rs  radical.rs  synergy.rs  terrain.rs  test_helpers.rs  tick.rs  transition.rs  turn.rs
src/dungeon/: generation.rs  mod.rs
src/enemy/: tests.rs
src/game/: combat_core.rs  console.rs  data.rs  dungeon_events.rs  events.rs  floor.rs  game_render.rs  helpers.rs  input.rs  items.rs  mod.rs  movement.rs  quests.rs  rooms.rs  serialization.rs  shop.rs  space_combat.rs  spells.rs  tests.rs  types.rs  ui_state.rs  victory.rs
src/particle/: tests.rs
src/player/: tests.rs
src/radical/: tests.rs
tools/: add_example.py  generated_recipes.rs  verify_recipes.py
(+223 files in other folders)
