[package]
name = "radical-roguelike"
version = "0.1.0"
edition = "2021"
description = "Radical Dungeon — a language-learning roguelike where you forge Chinese characters from radicals"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Performance",
    "KeyboardEvent",
    "HtmlElement",
    "EventTarget",
    "Element",
    "Storage",
    "console",
    "AudioContext",
    "AudioDestinationNode",
    "OscillatorNode",
    "OscillatorType",
    "GainNode",
    "AudioParam",
    "AudioNode",
    "AudioScheduledSourceNode",
] }
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
panic = "abort"
lto = true
codegen-units = 1
strip = true
