[package]
name = "radical-starfinder"
version = "0.1.0"
edition = "2021"
description = "Radical Starfinder — a language-learning space roguelike where you forge Chinese characters from quantum glyphs"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "CanvasRenderingContext2d",
    "Performance",
    "KeyboardEvent",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "HtmlElement",
    "EventTarget",
    "Element",
    "Storage",
    "console",
    "AudioContext",
    "AudioDestinationNode",
    "OscillatorNode",
    "OscillatorType",
    "GainNode",
    "AudioParam",
    "AudioNode",
    "AudioScheduledSourceNode",
    "BiquadFilterNode",
    "BiquadFilterType",
] }
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.dev]
panic = "abort"

[profile.release]
opt-level = "z"
panic = "abort"
lto = true
codegen-units = 1
strip = true
